fix(mobile) ColoredListview: canvas wrong position
Issue: OAPWAF-1684
- top position of list was not included in color calculation

--- a/tau/src/css/profile/mobile/changeable/common/coloredlist.less
+++ b/tau/src/css/profile/mobile/changeable/common/coloredlist.less
@@ -26,4 +26,5 @@
 	.transform(translate3d(0, 0, 0));
 	position: absolute;
 	left: 0;
+	z-index: -1;
 }
